# rdfoothills

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
crates/base/: Cargo.toml  README.md
crates/base/src/: hasher.rs  lib.rs  util.rs
crates/conversion/: Cargo.toml  README.md
crates/conversion/src/: lib.rs
crates/conversion/src/conversion/: mod.rs  oxrdfio.rs  pylode.rs  rdfconvert.rs  rdfx.rs  robot.rs
crates/iri/: Cargo.toml  README.md
crates/iri/src/: iri.rs  lib.rs
crates/mime/: Cargo.toml  README.md
crates/mime/src/: lib.rs  mime.rs
crates/mime/tests/: mime.rs
crates/vocab/: Cargo.toml  README.md
crates/vocab/src/: lib.rs  ocaa.rs  owl.rs  sh.rs
crates/vocabgen/: Cargo.toml  README.md
crates/vocabgen/src/: cli.rs  config.rs  lib.rs  main.rs  parse.rs
src/: cache.rs  cli.rs  constants.rs  lib.rs  logger.rs  main.rs  mime.rs  ont_request.rs  util.rs
src/conversion/: mod.rs  oxrdfio.rs  pylode.rs  rdfconvert.rs  rdfx.rs
src/convert/: mod.rs
