# SPDX-FileCopyrightText: 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "rdfoothills"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <robin.vobruba@proton.me>"]
description = """
    A collection of mostly small, RDF related utilities,
    including conversion between different serialization formats,
    using external tools.
    """
repository = "https://codeberg.org/elevont/rdfoothills"
homepage = "https://codeberg.org/elevont/rdfoothills"
keywords = ["rdf", "utility", "conversion"]
categories = ["api-bindings", "data-structures", "encoding", "filesystem", "text-processing"]
publish = true
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "allow"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
#default_trait_access = "allow"
option_if_let_else = "allow"

[dependencies]
async-trait = "0.1"
git-version = "0.3"
infer = "0.15"
mediatype = "0.19"
once_cell = "1.19"
thiserror = "1.0"
tokio = { version = "1.28", features = ["fs", "process"] }
