# SPDX-FileCopyrightText: 2022 - 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[workspace]
resolver = "2"
members = [
   "crates/base",
   "crates/conversion",
   "crates/iri",
   "crates/mime",
]
#default-members = ["crates/mime"]
#default-members = []

[workspace.package]
version = "0.4.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
repository = "https://github.com/hoijui/osh-dir-std-rs"
homepage = "https://github.com/hoijui/osh-dir-std-rs"
keywords = ["norm", "osh", "directory", "structure"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
readme = "README.md"
edition = "2021"

[workspace.lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
async-trait = "0.1"
git-version = "0.3"
infer = "0.16"
mediatype = "0.19"
once_cell = "1.19"
oxiri = "0.2"
oxrdfio = { version = "0.1", features = ["rdf-star"] }
regex = { version = "1.0", default-features = false }
rdfoothills-base = { version = "0.4.0", path = "crates/base" }
rdfoothills-conversion = { version = "0.4.0", path = "crates/conversion" }
rdfoothills-iri = { version = "0.4.0", path = "crates/iri" }
rdfoothills-mime = { version = "0.4.0", path = "crates/mime" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["fs", "process"] }
url = { version = "2.5", default-features = false }
