# SPDX-FileCopyrightText: 2022 - 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[workspace]
resolver = "2"
members = [
   "crates/base",
   "crates/conversion",
   "crates/iri",
   "crates/mime",
   "crates/vocab",
   "crates/vocabgen",
]
#default-members = ["crates/mime"]
#default-members = []

[workspace.package]
version = "0.6.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """A collection of mostly small, RDF related utilities,
including conversion between different serialization formats,
using external tools."""
repository = "https://github.com/hoijui/osh-dir-std-rs"
homepage = "https://github.com/hoijui/osh-dir-std-rs"
keywords = ["norm", "osh", "directory", "structure"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
readme = "README.md"
edition = "2021"

[workspace.lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "allow"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["cargo"] }
cli_utils = { version = "0.10", package = "cli_utils_hoijui", features = ["logging"] }
const_format = { version = "0.2", default-features = false }
convert_case = "0.8"
git-version = "0.3"
infer = "0.19"
mediatype = "0.19"
oxiri = "0.2"
oxrdf = "0.2"
oxrdfio = { version = "0.1", features = ["rdf-star"] }
petgraph = { version = "0.7", default-features = false }
regex = { version = "1.0", default-features = false }
rdfoothills-base = { version = "0.6.0", path = "crates/base" }
rdfoothills-conversion = { version = "0.6.0", path = "crates/conversion" }
rdfoothills-iri = { version = "0.6.0", path = "crates/iri" }
rdfoothills-mime = { version = "0.6.0", path = "crates/mime" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.13"
thiserror = "2.0"
tokio = { version = "1.38", features = ["fs", "process"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", default-features = false }
